<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyDetailsActivity">

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="43dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="117dp"
        android:contentDescription="@string/profileImageView"
        android:scaleType="fitEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myProfileBackButton2"
        app:srcCompat="@drawable/man_user" />

    <ImageView
        android:id="@+id/linkedInImageView"
        android:layout_width="43dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="84dp"
        android:contentDescription="@string/linkedInImageView"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twitterImageView"
        app:srcCompat="@drawable/linkedin" />

    <ImageView
        android:id="@+id/phoneImageView"
        android:layout_width="43dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/phoneImageView"
        android:scaleType="fitEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView"
        app:srcCompat="@drawable/smartphone_call" />

    <ImageView
        android:id="@+id/emailImageView"
        android:layout_width="43dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/emailImageView"
        android:scaleType="fitEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneImageView"
        app:srcCompat="@drawable/email" />

    <TextView
        android:id="@+id/myStudentNameTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="111dp"
        android:text="@string/myLinkedInTextView"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linkedInImageView"
        app:layout_constraintTop_toBottomOf="@+id/myTwitterTextView" />

    <TextView
        android:id="@+id/myEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:text="@string/myEmailTextView"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emailImageView"
        app:layout_constraintTop_toBottomOf="@+id/myContactTextView" />

    <TextView
        android:id="@+id/myTwitterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:text="@string/myTwitterTextView"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twitterImageView"
        app:layout_constraintTop_toBottomOf="@+id/myEmailTextView" />

    <TextView
        android:id="@+id/myContactTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="138dp"
        android:layout_marginRight="138dp"
        android:text="@string/myContactTextView"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/phoneImageView"
        app:layout_constraintTop_toBottomOf="@+id/myStudentNameTextView" />

    <Button
        android:id="@+id/myProfileBackButton2"
        android:layout_width="111dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/calcBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myDetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginLeft="149dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="@string/myDetailsTextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myStudentNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:text="@string/studentNameTextView"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toBottomOf="@+id/myDetailsTextView" />

    <ImageView
        android:id="@+id/twitterImageView"
        android:layout_width="43dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/twitterImageView"
        android:scaleType="fitEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailImageView"
        app:srcCompat="@drawable/twitter" />
</android.support.constraint.ConstraintLayout>