<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyMenuScreenActivity">

    <Button
        android:id="@+id/aboutMeButton"
        android:layout_width="177dp"
        android:layout_height="98dp"
        android:layout_marginStart="173dp"
        android:layout_marginLeft="173dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="173dp"
        android:layout_marginRight="173dp"
        android:background="@color/colorPrimary"
        android:onClick="toMyDetailsActivity"
        android:text="@string/aboutMeButton"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    <Button
        android:id="@+id/calculationButton"
        android:layout_width="177dp"
        android:layout_height="98dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:background="@color/colorPrimary"
        android:onClick="toCalculationActivity"
        android:text="@string/calculationButton"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:gravity="center"
        android:text="@string/welcomeTextView"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="177dp"
        android:layout_height="98dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="224dp"
        android:background="@color/colorPrimary"
        android:onClick="toMainActivity"
        android:text="@string/homeButton"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/myDevProfileButton"
        android:layout_width="297dp"
        android:layout_height="98dp"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="253dp"
        android:layout_marginRight="253dp"
        android:layout_marginBottom="272dp"
        android:background="@color/colorPrimary"
        android:onClick="toMyProfileActivity"
        android:text="@string/myDevProfileButton"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutMeButton" />
</android.support.constraint.ConstraintLayout>