<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/myCodeSpaceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:alpha="1"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/myCodeSpaceTextView"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:typeface="normal"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/promptVisitorNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:alpha="1"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/promptVisitorNameTextView"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myCodeSpaceTextView" />

    <EditText
        android:id="@+id/visitorNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/visitorNameEditText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promptVisitorNameTextView"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="60dp"
        android:background="@color/colorPrimary"
        android:text="@string/nextButton"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visitorNameEditText" />
</android.support.constraint.ConstraintLayout>